--- a/data/README
+++ b/data/README
@@ -1,1 +1,59 @@
+# Overview
 
+This folder contains a collection of datasets from polymer literature. Each dataset includes specific property measurements of polymers, derived from either simulations or experiments. Below is a table with the following information about the data:
+
+- Citation of the original work
+- Number of samples
+- Source type (simulation or experiment)
+- Property name
+
+
+| Dataset  | Number of Samples | Type        | Property                           |
+|----------|-------------------|-------------|------------------------------------|
+| \#1  | 18,414            | Simulated   | Electron affinity |
+| \#2  | 18,414            | Simulated   | Ionization potential|
+| \#3  | 1,077             | Simulated   | Radius of gyration |
+| \#4  | 390               | Simulated   | Atomization energy |
+| \#5  | 4,127             | Simulated   | Bandgap (Chain) |
+| \#6  | 1,747             | Simulated   | Electron injection barrier |
+| \#7  | 314               | Simulated   | Rubber coefficient of thermal expansion |
+| \#8  | 223               | Simulated   | Glass coefficient of thermal expansion |
+| \#9  | 314               | Simulated   | Density at 300K |
+| \#10 | 662               | Simulated   | Glass transition temperature |
+| \#11 | 432               | Simulated   | Crystallization tendency |
+| \#12 | 3,380             | Simulated   | Bandgap (Chain) |
+| \#13 | 561               | Simulated   | Bandgap (Bulk) |
+| \#14 | 42                | Simulated   | Ring-opening polymerization |
+| \#15 | 370               | Simulated   | Ionization energy |
+| \#16 | 382               | Simulated   | Refractive index |
+| \#17 | 1,070             | Simulated   | Thermal conductivity |
+| \#18 | 232               | Simulated   | Bandgap (Crystal) |
+| \#19 | 382               | Simulated   | Dielectric constant |
+| \#20 | 1,076             | Simulated   | Self-diffusion coefficient |
+| \#21 | 1,069             | Simulated   | Thermal diffusivity |
+| \#22 | 1,076             | Simulated   | Isentropic bulk modulus |
+| \#23 | 1,077             | Simulated   | Density |
+| \#24 | 350               | Simulated   | Ring-opening polymerization |
+| \#25 | 314               | Simulated   | Glass transition temperature |
+| \#26 | 1,075             | Simulated   | Refractive index |
+| \#27 | 1,077             | Simulated   | Static dielectric constant |
+| \#28 | 1,076             | Simulated   | Volume expansion coefficient |
+| \#29 | 1,076             | Simulated   | Linear expansion coefficient |
+| \#30 | 1,076             | Simulated   | Bulk modulus |
+| \#31 | 1,076             | Simulated   | Isentropic compressibility |
+| \#32 | 1,076             | Simulated   | Compressibility |
+| \#33 | 1,076             | Simulated   | Constant volume |
+| \#34 | 1,076             | Simulated   | Constant pressure |
+| \#35 | 368               | Experimental| Electron affinity |
+| \#36 | 210               | Experimental| Glass transition temperature |
+| \#37 | 243               | Experimental| Inherent viscosity |
+| \#38 | 204               | Experimental| 19F NMR Signal-to-noise ratio |
+| \#39 | 314               | Experimental| Glass transition temperature |
+| \#40 | 304               | Experimental| Glass transition temperature |
+| \#41 | 676               | Experimental| CO2/N2 selectivity |
+| \#42 | 611               | Experimental| CO2/CH4 selectivity |
+| \#43 | 727               | Experimental| N2 permeability |
+| \#44 | 690               | Experimental| CO2 permeability |
+| \#45 | 613               | Experimental| CH4 permeability |
+| \#46 | 116               | Experimental| Ring-opening polymerization |
+| \#47 | 117               | Experimental| Density at 300K |
